templates/taiga/taiga-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: taiga
    role: frontend
    romulus/lb: vulcan
    romulus/route: public
  name: taiga-frontend
  namespace: taiga
spec:
  ports:
  - name: frontend
    port: 80
  selector:
    app: taiga
    role: frontend
